# 3drepobouncer

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Harmony HA-CLA-E-ANY  Harmony HA-CLA-I-ANY  README.md  patch1  run_cmake_for_bouncer 1.bat  run_cmake_for_bouncer.bat  updateSources.py  win_build.cmd  win_build_boost_1_60_msvc_12.cmd  win_build_boost_1_60_msvc_14.cmd
bouncer/: CMakeLists.txt
bouncer/src/: CMakeLists.txt
bouncer/src/repo/: CMakeLists.txt  error_codes.cpp  error_codes.h  repo_bouncer_global.h  repo_controller.cpp  repo_controller.cpp.inl  repo_controller.h  repo_controller_internal.cpp.inl  repo_credentials.cpp  repo_credentials.h  repo_global_manager.cpp  repo_global_manager.h
bouncer/src/repo/core/handler/: CMakeLists.txt  repo_database_handler_abstract.cpp  repo_database_handler_abstract.h  repo_database_handler_mongo.cpp  repo_database_handler_mongo.h
bouncer/src/repo/core/model/: CMakeLists.txt  repo_model_global.h  repo_node_properties.h  repo_node_utils.h
bouncer/src/repo/lib/: CMakeLists.txt  json_parser.h  json_parser_write.h  repo_config.cpp  repo_config.h  repo_exception.cpp  repo_exception.h  repo_hash_combine.h  repo_json_parser.h  repo_license.cpp  repo_license.h  repo_listener_abstract.h  repo_log.cpp  repo_log.h  repo_property_tree.cpp  repo_property_tree.h  repo_stack.h  repo_time_zone_converter.h  repo_units.cpp  repo_units.h  repo_utils.h  time_zone_converter.h
bouncer/src/repo/lib/datastructure/: CMakeLists.txt  repo_bounds.cpp  repo_bounds.h  repo_container.h  repo_line.h  repo_matrix.cpp  repo_matrix.h  repo_matrix_def.h  repo_metadataVariant.cpp  repo_metadataVariant.h  repo_metadataVariantHelper.cpp  repo_metadataVariantHelper.h  repo_range.cpp  repo_range.h  repo_structs.h  repo_triangle-fwd.h  repo_triangle.cpp  repo_triangle.h  repo_uuid.cpp  repo_uuid.h  repo_variant.h  repo_variant_utils.h  repo_vector.h  repo_vector2d.h  repo_vector3d.h  vertex_map.cpp  vertex_map.h
bouncer/src/repo/lib/rapidjson/: CMakeLists.txt
bouncer/src/repo/manipulator/: CMakeLists.txt  repo_manipulator.cpp  repo_manipulator.h
bouncer/src/repo/manipulator/diff/: CMakeLists.txt  repo_diff_abstract.cpp  repo_diff_abstract.h  repo_diff_name.cpp  repo_diff_name.h  repo_diff_sharedid.cpp  repo_diff_sharedid.h
bouncer/src/repo/manipulator/drawingutility/: CMakeLists.txt  repo_drawing.cpp  repo_drawing.h  repo_drawing_manager.cpp  repo_drawing_manager.h
bouncer/src/repo/manipulator/modelconvertor/: CMakeLists.txt
bouncer/src/repo/manipulator/modeloptimizer/: CMakeLists.txt  repo_optimizer_abstract.cpp  repo_optimizer_abstract.h  repo_optimizer_ifc.cpp  repo_optimizer_ifc.h  repo_optimizer_mesh_simplification.cpp  repo_optimizer_mesh_simplification.h  repo_optimizer_multipart.cpp  repo_optimizer_multipart.h  repo_optimizer_trans_reduction.cpp  repo_optimizer_trans_reduction.h
bouncer/src/repo/manipulator/modelutility/: CMakeLists.txt  repo_clash_detection_config.cpp  repo_clash_detection_config.h  repo_clash_detection_config_fwd.h  repo_clash_detection_engine.cpp  repo_clash_detection_engine.h  repo_drawing.cpp  repo_drawing.h  repo_drawing_manager.cpp  repo_drawing_manager.h  repo_json_parser.h  repo_maker_selection_tree.cpp  repo_maker_selection_tree.h  repo_mesh_map_reorganiser.cpp  repo_mesh_map_reorganiser.h  repo_scene_builder.cpp  repo_scene_builder.h  repo_scene_cleaner.cpp  repo_scene_cleaner.h  repo_scene_manager.cpp  repo_scene_manager.h  repo_web_buffer_config.h
bouncer/src/repo/manipulator/statistics/: CMakeLists.txt  repo_statistics_generator.cpp  repo_statistics_generator.h
client/: CMakeLists.txt
client/src/: CMakeLists.txt  error_codes.h  functions.cpp  functions.h  main.cpp
doc/: config
ifcUtils/: 2  CMakeLists.txt  Ifc2x3.h  Ifc4.h  geometry_handler.cpp  globals.h  repo_ifc_serialiser.cpp  repo_ifc_serialiser.h  repo_ifc_serialiser_abstract.h  repo_ifc_utils.cpp  repo_ifc_utils.h  repo_ifc_utils_Ifc2x3.h  repo_ifc_utils_Ifc4.h  repo_ifc_utils_constants.h  repo_ifc_utils_geometry_handler.cpp  repo_ifc_utils_globals.h  repo_ifc_utils_schema_template.h  repo_ifc_utils_tree_parser.cpp  tree_parser.cpp
repobouncerclient/: CMakeLists.txt  functions.cpp  main.cpp
src/repo/core/handler/: CMakeLists.txt  repo_database_handler_abstract.cpp  repo_database_handler_abstract.h  repo_database_handler_mongo.cpp  repo_database_handler_mongo.h
src/repo/core/handler/connectionpool/: CMakeLists.txt  repo_connection_pool_mongo.cpp  (+1 more)
test/: CMakeLists.txt  UsersCarmenDesktopchairtest.obj.mtl  main.cpp  test.cpp  test_old.cpp_
test/data/database/journal/: j._0  lsn
test/data/models/: invalid.json  noDb.json  noPro.json  noSubPro.json  texturedPlane.dae  texturedPlane2.dae  validFed.json
test/src/: CMakeLists.txt  main.cpp
test/src/system/: CMakeLists.txt  st_3drepobouncerClient.cpp
test/src/unit/: CMakeLists.txt  repo_test_clash_utils.cpp  repo_test_clash_utils.h  repo_test_common_tests.cpp  repo_test_common_tests.h  repo_test_database_info.cpp  repo_test_database_info.h  repo_test_fileservice_info.h  repo_test_matchers.cpp  repo_test_matchers.h  repo_test_mesh_utils.cpp  repo_test_mesh_utils.h  repo_test_mock_clash_scene.cpp  repo_test_mock_clash_scene.h  repo_test_mock_database.cpp  repo_test_mock_database.h  repo_test_random_generator.cpp  repo_test_random_generator.h  repo_test_scene_utils.cpp  repo_test_scene_utils.h  repo_test_scenecomparer.cpp  repo_test_scenecomparer.h  repo_test_utils.cpp  repo_test_utils.h
test/src/unit/repo/: CMakeLists.txt  ut_repo_controller.cpp  ut_repo_sandbox.cpp
test/unit/repo/core/: CMakeLists.txt
tools/admin/: CMakeLists.txt  bouncerTool.cpp  error_codes.h  functions.cpp  functions.h
wrapper/: CMakeLists.txt  README.md
wrapper/cmake_modules/: FindASSIMPM.cmake  FindBOUNCER.cmake
wrapper/src/: CMakeLists.txt  c_sharp_wrapper.cpp  c_sharp_wrapper.h  repo_csharp_interface.cpp  repo_csharp_interface.h
wrapper_test/: CMakeLists.txt
wrapper_test/src/: CMakeLists.txt  main.cpp
wrapper_test/src/unit/: CMakeLists.txt  ut_repo_csharp_interface.cpp
(+1337 files in other folders)
