
#================Source and header files===============
add_subdirectory(src)

set(VERSION_MAJOR 5)
set(VERSION_MINOR 19_1)

include_directories(
	${MONGO_CXX_DRIVER_MONGO_INCLUDE_DIR}
	${MONGO_CXX_DRIVER_BSON_INCLUDE_DIR}
	${Boost_INCLUDE_DIR}
	${ASSIMP_INCLUDE_DIR}
	${IFCUTILS_INCLUDE_DIR}
	${ODA_INCLUDE_DIR}
	${SYNCHRO_READER_INCLUDE_DIR}
	${AWSSDK_INCLUDE_DIR}
	${CRYPTOLENS_INCLUDE_DIR}
	src
	../
	../log
)

add_definitions(-DREPO_API_LIBRARY)

add_library(3drepobouncer SHARED ${SOURCES})
set_target_properties(3drepobouncer PROPERTIES RELEASE_POSTFIX "_${VERSION_MAJOR}_${VERSION_MINOR}")
set_target_properties(3drepobouncer PROPERTIES DEBUG_POSTFIX "_${VERSION_MAJOR}_${VERSION_MINOR}_d")

target_link_libraries(3drepobouncer
	${Boost_LIBRARIES}
	${MONGO_CXX_DRIVER_LIBRARIES}
	${ASSIMP_LIBRARIES}
	${IFCUTILS_LIBRARIES}
	${ODA_LIB}
	${SYNCHRO_READER_LIBRARIES}
	${THRIFT_LIBRARIES}
	${ZLIB_LIBRARIES}
	${SYNCHRO_LIBRARIES}
	${AWSSDK_LIBRARIES}
	${CRYPTOLENS_LIBRARIES}
	log
)

install(DIRECTORY src/ DESTINATION include FILES_MATCHING PATTERN "*.h")
install(TARGETS 3drepobouncer DESTINATION lib)
