

set(TOOLS_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/functions.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/bouncerTool.cpp
	CACHE STRING "TOOL_SOURCES" FORCE)

set(TOOLS_HEADERS
	${CMAKE_CURRENT_SOURCE_DIR}/error_codes.h
	${CMAKE_CURRENT_SOURCE_DIR}/functions.h
	CACHE STRING "TOOL_HEADERS" FORCE)

include_directories(src ../../bouncer/src 
	${Boost_INCLUDE_DIR} ${MONGO_INCLUDE_DIR} ${ASSIMP_INCLUDE_DIR} ${OCCT_INCLUDE_DIR} ${IFCOPENSHELL_INCLUDE_DIR})
add_executable(3drepobouncerTool ${TOOLS_SOURCES}) 
target_link_libraries(3drepobouncerTool 3drepobouncer 
	${Boost_LIBRARIES} ${MOMGO_LIBRARIES} ${ASSIMP_LIBRARIES} ${OCCT_LIBRARIES} ${IFCOPENSHELL_GEOMLIB} ${IFCOPENSHELL_PARSERLIB})


install(TARGETS 3drepobouncerTool DESTINATION bin)
